manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82265634
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82265634
  template:
    metadata:
      labels:
        app: 82265634
    spec:
      containers:
        - name: 82265634
          image: cepgstapacr.azurecr.io/82265634
          ports:
          - containerPort: 8080
