manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: 82265634
spec:
    ports:
    - port: 8080 
    selector:
        app: 82265634
