manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82265634-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "sampleapp1-82265634.cepg-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: "my-82265634""
            port:
              number: 8080
        pathType: Prefix
